Style fixed: the head-bar should look well when native scrollbar appear

--- a/zul/src/archive/web/js/zul/grid/less/grid.less
+++ b/zul/src/archive/web/js/zul/grid/less/grid.less
@@ -68,6 +68,7 @@
 		border-left: none;
 	}
 	&-bar {
+		border-left: 1px solid @tableTitleBorderColor;
 		border-bottom: 1px solid @tableTitleBorderColor;
 	}
 }
