--- a/zul/src/archive/web/js/zul/mesh/less/auxhead.less
+++ b/zul/src/archive/web/js/zul/mesh/less/auxhead.less
@@ -4,6 +4,10 @@
 	th:first-child {
 		border-left: none;
 	}
+
+	&-bar {
+		border-left: 1px solid @tableTitleBorderColor;
+	}
 }
 
 .z-auxheader {
@@ -29,7 +33,7 @@
 	}
 }
 
-.ie8 .z-auxheader{
+.ie8 .z-auxheader {
 	position: static;
 	background: @meshBackgroundColor;
 }
