--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -64,6 +64,7 @@
 		border-left: none;
 	}
 	&-bar {
+		border-left: 1px solid @tableTitleBorderColor;
 		border-bottom: 1px solid @tableTitleBorderColor;
 	}
 }
